# MyWord

./: CMakeLists.txt
src/: MyChild.cpp  main.cpp  myword.cpp
src/Forms/: myword.ui
src/Headers/: MyChild.h  myword.h
